dd# On branch master

--- a/elavarasan_archana_invitation.html
+++ b/elavarasan_archana_invitation.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href= 'https://fonts.googleapis.com/css?family=Sofia|Baloo|Roboto|Tangerine' rel='stylesheet' />
 <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
-<link href="/invitation/assets/css/style.css" rel="stylesheet">
-<script src="/invitation/assets/js/main.js"></script>
+<link href="/weddingcards/style.css" rel="stylesheet">
+<script src="/weddingcards/main.js"></script>
 </head>
 <body>
 <!--https://www.w3schools.com/howto/howto_css_profile_card.asp-->
