--- a/mayil_raji_invitation.html
+++ b/mayil_raji_invitation.html
@@ -20,7 +20,7 @@
   <section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Calendar</h1>
   <div style="margin: 24px 0;">
-    <a  style="color:yellow;" href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N3UybGw4Zjd0Y2p2ZjVrYWpydmQ3dWx0NnYgcmFtZXNoZWxhdmFAbQ&tmsrc=rameshelava%40gmail.com"><i  style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
+    <a  style="color:yellow;" href="https://calendar.google.com/calendar/u/0/r/eventedit?text=Mayilerum+Pillai+Rajeshwari+Wedding&details=We+welcome+you+for+our+wedding&location=Siva+Vishnu+Temple,+1st+Cross+St,+Maxworth+Nagar,+Kovilambakkam,+Chennai,+Tamil+Nadu+600117&dates=20230127T0030000Z/20230127T020000Z"><i  style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
   </div>
   </section>
   <section>
