--- a/mayil_raji_invitation.html
+++ b/mayil_raji_invitation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><meta http-equiv="refresh" content="0; />
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href= 'https://fonts.googleapis.com/css?family=Sofia|Baloo|Roboto|Tangerine' rel='stylesheet' />
 <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
