--- a/mayil_raji_invitation.html
+++ b/mayil_raji_invitation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="refresh" content="0; />
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href= 'https://fonts.googleapis.com/css?family=Sofia|Baloo|Roboto|Tangerine' rel='stylesheet' />
