Please enter the commit message for your changes. Lines starting

--- a/mayil_raji_invitation.html
+++ b/mayil_raji_invitation.html
@@ -8,7 +8,7 @@
 <link href="/weddingcards/style.css" rel="stylesheet">
 <script src="/weddingcards/main.js"></script>
 </head>
-<body>
+<body style="margin: 0px;">
 <!--https://www.w3schools.com/howto/howto_css_profile_card.asp-->
 
 <div class="card" >
